fix for titles and menu items. fix for api overflowing text

--- a/explorer/src/app/components/api/api.component.less
+++ b/explorer/src/app/components/api/api.component.less
@@ -4,3 +4,7 @@ h5 {
 
   }
 }
+
+a {
+  word-wrap: break-word;
+}
