--- a/explorer/src/app/components/header/header.component.less
+++ b/explorer/src/app/components/header/header.component.less
@@ -178,7 +178,7 @@
     margin-top: 4px;
     background-color: @border-color;
 
-    @media (max-width: 992px) {
+    @media (max-width: 1170px) {
       & {
         display: none;
       }
@@ -258,7 +258,7 @@
   }
 }
 
-@media (min-width: 1056px) {
+@media (min-width: 1170px) {
   .my-navbar-expand {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
